Fix bug where tech icons alignment was off

--- a/portfolio/src/components/project/project.scss
+++ b/portfolio/src/components/project/project.scss
@@ -22,8 +22,8 @@
 
 .project-display-tech {
     display:flex;
-    justify-content: center;
-    align-items: center;
+    justify-content: top;
+    align-items: flex-start;
 }
 
 .project-links-container {
